--- a/PDS_ASSIGNMENT1.ipynb
+++ b/PDS_ASSIGNMENT1.ipynb
@@ -310,8 +310,8 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "file1 = \"/content/drive/MyDrive/Colab Notebooks/PDS Assignment project 1/Purchase-1.txt\"\n",
-        "file2 = \"/content/drive/MyDrive/Colab Notebooks/PDS Assignment project 1/Purchase-2.txt\"\n",
+        "file1 = \"/Purchase-1 (1).txt\"\n",
+        "file2 = \"/Purchase-2.txt\"\n",
         "\n",
         "def process_file(filename):\n",
         "    items = 0\n",
